Fusion-Qa-Final/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>OSF_DWback__Commerce_Cloud_CreatedBy__c</fullName>
        <label>Commerce Cloud Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Abandoned_Cart_Id__c</fullName>
        <label>Commerce Cloud Basket Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Billing_Phone__c</fullName>
        <label>Commerce Cloud Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Order_No__c</fullName>
        <label>Commerce Cloud Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Replaced_Order_No__c</fullName>
        <label>Commerce Cloud Replaced Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Replacement_Order_No__c</fullName>
        <label>Commerce Cloud Replaced By Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Shipping_Method__c</fullName>
        <label>Commerce Cloud Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Shipping_Phone__c</fullName>
        <label>Commerce Cloud Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Site__c</fullName>
        <label>Commerce Cloud Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Total_price__c</fullName>
        <inlineHelpText>The total amount of the order, including product discounts.</inlineHelpText>
        <label>Total Order Amount</label>
        <summarizedField>OrderItem.OSF_DWback__Demandware_Total_price__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__In_Store_Order__c</fullName>
        <label>In Store Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Include_Record_Type_in_KPI__c</fullName>
        <label>Include Record Type in KPI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Order_Registration_Status__c</fullName>
        <label>Order Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Synced_by_UnifyCommerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced by UnifyCommerce</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>B2C_Order</fullName>
        <active>true</active>
        <label>B2C Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>